--- a/templates/buildkit/manifests.yaml
+++ b/templates/buildkit/manifests.yaml
@@ -1,17 +1,3 @@
-# Build and push an image using Docker Buildkit. This does not need privileged access, unlike Docker in Docker (DIND).
-#
-# Publishing images requires an access token. For hub.docker.com you can create one at https://hub.docker.com/settings/security
-# This needs to be mounted as `$DOCKER_CONFIG/config.json`. To do this, you'll need to create a secret as follows:
-#
-#   export DOCKER_USERNAME=******
-#   export DOCKER_TOKEN=******
-#   kubectl create secret generic docker-config --from-literal="config.json={\"auths\": {\"https://index.docker.io/v1/\": {\"auth\": \"$(echo -n $DOCKER_USERNAME:$DOCKER_TOKEN|base64)\"}}}"
-#
-#  Read more:
-#
-#     * https://github.com/moby/buildkit#expose-buildkit-as-a-tcp-service
-#     * https://blog.alexellis.io/building-containers-without-docker/
-#     * https://hub.docker.com/r/moby/buildkit
 apiVersion: argoproj.io/v1alpha1
 kind: WorkflowTemplate
 metadata:
@@ -19,9 +5,9 @@ metadata:
   annotations:
     workflows.argoproj.io/description: |
       Build and push an image using Docker Buildkit. This does not need privileged access, unlike Docker in Docker (DIND).
-    workflows.argoproj.io/maintainer: '@alexec'
+    workflows.argoproj.io/maintainer: "@alexec"
     workflows.argoproj.io/tags: buildkit
-    workflows.argoproj.io/version: '>= 2.9.0'
+    workflows.argoproj.io/version: ">= 2.9.0"
 spec:
   templates:
     - name: image
